Fix font size and contrast on home page new badges

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -93,7 +93,8 @@
 
 .badge.badge--is-new {
   background-color: #da3a38; 
-  color: #fcfcfc;
+  color: #ffff;
+  font-size: 16px;
 }
 
 .flag {
